Fix button overflowing in small resolutions.
Fixes #36.

--- a/css/httpobs.css
+++ b/css/httpobs.css
@@ -166,7 +166,7 @@ body {
 .expandy-panel-button {
     font-weight: 600;
     padding: 4px 8px;
-    white-space: nowrap;
+    white-space: normal;
 }
 
 
